# gpu-kernel-engineering

./: .gitignore  ATTENTION_ROADMAP.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
common/: CMakeLists.txt  validation.cpp
common/include/gpu_kernel/: cuda_check.hpp  runner_utils.hpp  validation.hpp
common/scripts/: common.sh  common_test.sh
common/tests/: common_tests.cpp
docs/superpowers/plans/: 2026-07-15-attention-prefill-m1-performance-evidence.md
docs/superpowers/specs/: 2026-07-15-attention-prefill-m1-performance-evidence-design.md
projects/attention_prefill/: CMakeLists.txt  M2_CHECKLIST.md  README.md  ROADMAP.md
projects/attention_prefill/evidence/: main.cu  runner.cu
projects/attention_prefill/include/attention_prefill/: evidence_runner.hpp  query_tiled.hpp  warp_per_query.hpp
projects/attention_prefill/kernels/: query_tiled.cu  warp_per_query.cu
projects/attention_prefill/results/: README.md
projects/attention_prefill/results/evidence/: m1-ncu-smoke.md  m1-ncu-summary.md  m1-sass.md  m2-development-summary.md  m2-sass-development.md
projects/attention_prefill/results/raw/: a100-fp32-m1.csv
projects/attention_prefill/runner/: main.cu
projects/attention_prefill/scripts/: append_m1_csv.py  benchmark_m1.sh  compare_m2.py  extract_m1_sass.sh  extract_m2_sass.sh  profile_m1.sh  profile_m2.sh  render_m1_results.py  sanitize.sh  source_fingerprint.py  summarize_m1_ncu.py  validate_build_attestation.py
projects/attention_prefill/tests/: benchmark_m1_test.py  evidence_runner_integration_test.py  evidence_runner_tests.cpp  m1_profile_sass_test.py  problem_contract_tests.cu  render_m1_results_test.py  source_fingerprint_test.py  summarize_m1_ncu_test.py  test_query_tiled.sh  test_warp_per_query.sh
projects/flash_attention/: CMakeLists.txt  LEARNING.md  README.md
projects/flash_attention/common/: reference.cpp  validation.cpp
projects/flash_attention/docs/: async-pipeline.md  methodology.md  ncu-hands-on.md  parallel-reduction.md
projects/flash_attention/include/flash_attention/: common.cuh  cuda_check.hpp  kernel.hpp  reference.hpp  runner.hpp  validation.hpp
projects/flash_attention/kernels/: naive.cu  tiled.cu  tiled_async.cu  tiled_parallel.cu
projects/flash_attention/results/: README.md
projects/flash_attention/results/evidence/: tiled-async-sass.md  tiled-sass.md
projects/flash_attention/results/raw/: a100-fp32.csv
projects/flash_attention/runner/: main.cu  registry.cu  runner.cu
projects/flash_attention/scripts/: benchmark.sh  extract_sass.sh  profile.sh  render_results.py  sanitize.sh  summarize_ncu.py  test_tiled.sh  test_tiled_async.sh  test_tiled_parallel.sh  validate.sh
projects/flash_attention/tests/: common_tests.cpp  correctness_cases.csv  render_results_test.py  runner_tests.cpp  summarize_ncu_test.py
projects/gemm/: CMakeLists.txt  README.md  TENSOR_CORE_ROADMAP.md
projects/gemm/common/: reference.cpp  reference_cublas.cu  validation.cpp
projects/gemm/docs/: async-pipeline.md  cublas-baseline.md  kernel-verification-guide.md  methodology.md  naive.md  register-tiled.md  shared-tiled.md  tensor-core-learning.md  vectorized.md
projects/gemm/include/gemm/: cublas_check.hpp  cuda_check.hpp  kernel.hpp  reference.hpp  runner.hpp  validation.hpp
projects/gemm/kernels/: double_buffer.cu  naive.cu  register_tiled.cu  shared_tiled.cu  vectorized.cu
projects/gemm/results/: README.md
projects/gemm/results/evidence/: async-16b-sass.md  vectorized-sass.md
projects/gemm/results/raw/: a100-fp32.csv
projects/gemm/runner/: main.cu  registry.cu  runner.cu
projects/gemm/scripts/: benchmark.sh  extract_sass.sh  profile.sh  render_results.py  sanitize.sh  validate.sh
projects/gemm/tests/: common_tests.cpp  correctness_cases.csv  runner_tests.cpp
projects/gemm_tensorcore/: CMakeLists.txt  README.md
projects/gemm_tensorcore/common/: reference.cu
projects/gemm_tensorcore/include/gemm_tensorcore/: kernel.hpp  reference.hpp
projects/gemm_tensorcore/kernels/: wmma_direct.cu  wmma_single.cu
projects/gemm_tensorcore/results/: README.md
projects/gemm_tensorcore/results/evidence/: wmma-direct-sass.md  wmma-single-sass.md
projects/gemm_tensorcore/runner/: direct_main.cu  main.cu
projects/gemm_tensorcore/scripts/: extract_sass.sh  extract_wmma_direct_sass.sh  sanitize.sh  sanitize_wmma_direct.sh  test_wmma_direct.sh  test_wmma_single.sh
projects/gemm_tensorcore/tests/: reference_tests.cu
